<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <AutoCompleteTextView
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="16dp"
        android:completionThreshold="0"
        android:hint="Type animals here..."
        android:inputType="textCapWords"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/animals_list_scrollview"
        app:layout_constraintEnd_toStartOf="@+id/search_select_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/search_select_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="16dp"
        android:onClick="onSearchSelectClick"
        android:text="Select"
        app:layout_constraintBottom_toTopOf="@+id/animals_list_scrollview"
        app:layout_constraintEnd_toStartOf="@+id/list_count_text_view"
        app:layout_constraintStart_toEndOf="@+id/search_bar" />

    <TextView
        android:id="@+id/list_count_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="0"
        android:textSize="32dp"
        app:layout_constraintBottom_toTopOf="@+id/animals_list_scrollview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_select_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/search_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="126dp" />

    <ScrollView
        android:id="@+id/animals_list_scrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="124dp"
        android:fadeScrollbars="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_count_text_view">


        <TextView
            android:id="@+id/animals_list_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            android:text=""
            android:textSize="22dp" />
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/scrollview_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="650dp" />

    <Button
        android:id="@+id/generate_plan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="30dp"
        android:onClick="onGeneratePlanClick"
        android:text="Generate Plan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animals_list_scrollview" />

</androidx.constraintlayout.widget.ConstraintLayout>